# ical2jcal

./: 404.html  CONTRIBUTING.md  README.md  example.ics  example.jcal  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: ci.yml  pages.yml
advanced/: index.html
changelog/: index.html
compatibility/: index.html
contributing/: index.html
development/: index.html
docs/: .gitignore  advanced.md  changelog.md  compatibility.md  contributing.md  development.md  index.md
docs/licenses/: license.md
ical2jcal/: index.html
jcal2ical/: index.html
licenses/: license_files.txt  summary.txt
licenses/license/: index.html
licenses/license_report/: index.html
search/: search_index.json
src/ical2jcal/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_ical2jcal.py  test_jcal2ical.py  test_version.py
tests/calendars/: stream.ics
